apps/vps/subs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subs
  namespace: subs
spec:
  selector:
    app: subs
  ports:
    - name: http
      port: 80
      targetPort: http
